--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
                             <label for="date"> First day*</label>
-                            <input type="date" id="date" placeholder="First Day*" value="" class="form-control">
+                            <input type="date" id="date" placeholder="Date*" value="" class="form-control">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
                             <label for="date"> Last day*</label>
-                            <input type="date" id="date" placeholder="Last Day*" value="" class="form-control">
+                            <input type="date" id="date" placeholder="Date*" value="" class="form-control">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
