--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <option value="weblink">Web Link</option>
                         <option value="trailer">Trailer Life</option>
                         <option value="wheelers">Wheelers</option>
-                        <option value="woodall">WoodALL</option>
+                        <option value="woodall">Woodalls</option>
                       </select>
                         </div>
                     </div>
