fiexed joined a group

--- a/index.html
+++ b/index.html
@@ -388,12 +388,12 @@
                         <div class="form-group form-geoup">
                             <label class="NOP">Joined a Group?</label>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="Jog" id="inlineRadio1" value="option1">
-                                <label class="form-check-label" for="inlineRadio1">Yes</label>
+                                <input class="form-check-input" type="radio" name="Jog" id="joinedagroup" value="option1">
+                                <label class="form-check-label" for="joinedagroup">Yes</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="Jog" id="inlineRadio2" value="option2">
-                                <label class="form-check-label" for="inlineRadio2">No</label>
+                                <input class="form-check-input" type="radio" name="Jog" id="joinedagroup" value="option2">
+                                <label class="form-check-label" for="joinedagroup">No</label>
                             </div>
                         </div>
                     </div>
@@ -413,7 +413,7 @@
                 <div class="row">
                     <div class="col-md-12 col-sm-12">
                         <div class="form-check form-check-inline acceptterms">
-                            <input class="form-check-input" type="radio" name="checkbox" id="inlineRadio1" value="option1">
+                            <input class="form-check-input" type="radio" name="checkbox" id="inlineRadio1" value="option1" required>
                             <label class="form-check-label acceptterms" for="checkbox"> By selecting this box, I accept and understand the rules and regulations of Golden Shore RV Resort.</label>
                         </div>
                     </div>
