--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@ http://stackoverflow.com/questions/26573346/ios-safari-messes-up-input-type-date
                 <div class="row">
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
-                            <label for="date"> First day*</label>
-                            <input type="date" id="date" placeholder="mm/dd/yyyy*" value="" class="form-control">
+                            <label for="firstdate"> First day*</label>
+                            <input type="date" id="firstdate" placeholder="mm/dd/yyyy*" value="" class="form-control">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
-                            <label for="date"> Last day*</label>
-                            <input type="date" id="date" placeholder="mm/dd/yyyy*" value="" class="form-control">
+                            <label for="lastdate"> Last day*</label>
+                            <input type="date" id="lastdate" placeholder="mm/dd/yyyy*" value="" class="form-control">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
