--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@ http://stackoverflow.com/questions/26573346/ios-safari-messes-up-input-type-date
                 padding-left: 160px;
             }
         }
+        
+        .fsom {
+            padding-top: 12px;
+        }
     </style>
 </head>
 
@@ -242,7 +246,7 @@ http://stackoverflow.com/questions/26573346/ios-safari-messes-up-input-type-date
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
                             <label for="firstdate"> First day*</label>
-                            <input type="date" id="firstdate" placeholder="mm/dd/yyyy*" value="" class="form-control">
+                            <input type="date" id="firstdate" placeholder="mm/dd/yyyy*" value="" class="form-control" autocomplete=“off”>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
